--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -1666,6 +1666,7 @@ output {
 			display: inline-block;
 			margin: 2px 14px 0 0;
 			white-space: nowrap;
+			cursor: default;
 
 			.subfilter-enabled {
 				padding: 0 9px 0 4px;
@@ -1755,11 +1756,8 @@ output {
 
 .available {
 	position: absolute;
-	z-index: 1000;
-	margin-top: 1px;
+	z-index: 20000;
 	border: 1px solid $action-border-color;
-	border-top: none;
-	max-height: 400px;
 	overflow-y: auto;
 	@extend %webkit-scrollbar;
 	@include box-shadow(0 6px 10px 0 $action-shadow-color);
